# dbfy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  restsql_spec.md
.github/workflows/: bindings-smoke.yml  integration.yml  maven-jvm.yml  npm.yml  nuget.yml  pypi.yml  release.yml  swift.yml  test.yml
bindings/csharp/: Dbfy.sln  README.md
bindings/csharp/Dbfy/: Dbfy.csproj  DbfyException.cs  Engine.cs  Native.cs  Result.cs
bindings/csharp/Dbfy.Tests/: Dbfy.Tests.csproj  EngineTests.cs
bindings/jvm/: PUBLISHING.md  build.gradle.kts  settings.gradle.kts
bindings/jvm/dbfy-jvm/: build.gradle.kts
bindings/jvm/dbfy-jvm/src/main/java/com/dbfy/: Dbfy.java
bindings/jvm/dbfy-jvm/src/test/java/com/dbfy/: DbfyTest.java
bindings/jvm/dbfy-kotlin/: build.gradle.kts
bindings/jvm/dbfy-kotlin/src/main/kotlin/com/dbfy/: Dbfy.kt
bindings/jvm/dbfy-kotlin/src/test/kotlin/com/dbfy/: DbfyKotlinTest.kt
bindings/swift/: Package.swift  README.md  build-xcframework.sh
bindings/swift/Sources/CDbfy/include/: CDbfy.h  dbfy.h
bindings/swift/Sources/Dbfy/: Dbfy.swift
bindings/swift/Tests/DbfyTests/: EngineTests.swift
crates/dbfy-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/dbfy-c/include/: dbfy.h
crates/dbfy-c/src/: lib.rs
crates/dbfy-c/tests/: run_smoke.sh  smoke.c
crates/dbfy-cli/: Cargo.toml
crates/dbfy-cli/src/: detect.rs  duckdb_attach.rs  init.rs  main.rs  probe.rs
crates/dbfy-config/: Cargo.toml
crates/dbfy-config/src/: lib.rs
crates/dbfy-frontend-datafusion/: Cargo.toml
crates/dbfy-frontend-datafusion/examples/: programmatic_csv.rs
crates/dbfy-frontend-datafusion/examples/data/: customers.csv
crates/dbfy-frontend-datafusion/src/: lib.rs
crates/dbfy-frontend-datafusion/tests/: integration_ldap.rs  integration_parquet.rs  integration_postgres.rs
crates/dbfy-frontend-duckdb/: Cargo.toml  README.md  build.rs
crates/dbfy-frontend-duckdb/cpp/: extension_shim.cpp
crates/dbfy-frontend-duckdb/examples/: sensor_analytics.py
crates/dbfy-frontend-duckdb/scripts/: append_metadata.py
crates/dbfy-frontend-duckdb/src/: arrow_to_duckdb.rs  lib.rs  rest_vtab.rs  rows_file_vtab.rs
crates/dbfy-frontend-duckdb/tests/: integration.rs  smoke_load.py
crates/dbfy-jni/: Cargo.toml  README.md
crates/dbfy-jni/java/com/dbfy/: Dbfy.java
crates/dbfy-jni/java/com/dbfy/test/: AsyncSmokeTest.java
crates/dbfy-jni/src/: lib.rs
crates/dbfy-node/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
crates/dbfy-node/__test__/: engine.test.mjs
crates/dbfy-node/src/: lib.rs
crates/dbfy-provider/: Cargo.toml
crates/dbfy-provider-rest/: Cargo.toml
crates/dbfy-provider-rest/src/: cache.rs  lib.rs
crates/dbfy-provider-rest/tests/: cache.rs
crates/dbfy-provider-rows-file/: Cargo.toml
crates/dbfy-provider-rows-file/examples/: log_analytics.rs
crates/dbfy-provider-rows-file/src/: bloom.rs  from_config.rs  glob_table.rs  index.rs  indexer.rs  invalidation.rs  lib.rs  parser.rs  pruner.rs  reader.rs
crates/dbfy-provider-rows-file/src/parsers/: cells.rs  csv.rs  jsonl.rs  logfmt.rs  mod.rs  regex.rs  syslog.rs
crates/dbfy-provider-rows-file/tests/: bloom.rs  concurrent_writer.rs  glob.rs  incremental.rs  integration.rs  invalidation.rs
crates/dbfy-provider-static/: Cargo.toml
crates/dbfy-provider-static/src/: lib.rs
crates/dbfy-provider/src/: lib.rs
crates/dbfy-py/: Cargo.toml  README.md  pyproject.toml
crates/dbfy-py/examples/: check_pushdown.py  programmatic_provider.py  programmatic_provider_pushdown.py
crates/dbfy-py/python/dbfy/: __init__.py  __init__.pyi
crates/dbfy-py/src/: lib.rs
crates/dbfy-py/tests/: smoke.py  smoke_async.py  smoke_provider.py  smoke_pushdown.py
docs/: implementation-plan.md  pushdown-matrix.md  quickstart.md
examples/auth-audit/: README.md  docker-compose.yml  run.sh
examples/auth-audit/configs/: auth.yaml
examples/auth-audit/data/: generate-syslog.py  seed.sql
examples/auth-audit/queries/: 01_directory_summary.sql  02_failed_login_storms.sql  03_orphan_audit_records.sql  04_killer_3way.sql
examples/finance-recon/: README.md  run.sh
examples/finance-recon/configs/: finance.yaml
examples/finance-recon/data/: generate.py
examples/finance-recon/queries/: 01_sales_summary.sql  02_warehouse_drift.sql  03_overdue_payments.sql  04_killer_recon.sql
examples/lang/: README.md
examples/lang/csharp/: Program.cs
examples/lang/java/: Demo.java
examples/lang/kotlin/: Demo.kt
examples/lang/node/: demo.mjs
examples/lang/python/: demo.py
examples/lang/rust/: main.rs
examples/lang/swift/: Demo.swift
examples/saas-metrics/: README.md  docker-compose.yml  run.sh
examples/saas-metrics/configs/: saas.yaml
examples/saas-metrics/data/: budget.py  graphql-server.py  seed.sql
examples/saas-metrics/queries/: 01_usage_summary.sql  02_revenue_vs_budget.sql  03_mrr_drift.sql  04_killer_arpu_vs_usage.sql
examples/showcase/: README.md  run.sh
examples/showcase/configs/: all.yaml
examples/showcase/data/: generate.py
examples/showcase/queries/: 01_hello_rest.sql  02_l3_skip.sql  03_bloom_absent.sql  04_glob_skip.sql  05_killer_3way.sql
