[workspace]
members = [
    "crates/dbfy-c",
    "crates/dbfy-cli",
    "crates/dbfy-config",
    "crates/dbfy-frontend-datafusion",
    "crates/dbfy-frontend-duckdb",
    "crates/dbfy-jni",
    "crates/dbfy-node",
    "crates/dbfy-provider",
    "crates/dbfy-provider-rest",
    "crates/dbfy-provider-rows-file",
    "crates/dbfy-provider-static",
    "crates/dbfy-py",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
datafusion = "53.1.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5.7"

# Future: once https://github.com/duckdb/duckdb-rs/pull/753 ships in a
# published `libduckdb-sys`, dbfy-frontend-duckdb's build.rs will read
# `DEP_DUCKDB_INCLUDE` directly and drop its glob fallback. Until then,
# the glob fallback works against unmodified upstream and no patch is
# needed.
