[package]
name = "dbfy-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
datafusion.workspace = true
dbfy-config = { path = "../dbfy-config" }
dbfy-frontend-datafusion = { path = "../dbfy-frontend-datafusion" }
dbfy-provider-rows-file = { path = "../dbfy-provider-rows-file" }
dialoguer = { version = "0.11.0", default-features = false }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
