[package]
name = "dbfy-frontend-datafusion"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
csv.workspace = true
datafusion.workspace = true
futures.workspace = true
dbfy-config = { path = "../dbfy-config" }
dbfy-provider = { path = "../dbfy-provider" }
dbfy-provider-rest = { path = "../dbfy-provider-rest" }
dbfy-provider-rows-file = { path = "../dbfy-provider-rows-file" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
dbfy-provider-static = { path = "../dbfy-provider-static" }
serde_json = "1.0.149"
tempfile = "3.27.0"
wiremock = "0.6.5"
