[package]
name = "dbfy-node"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow-array.workspace = true
arrow-ipc = "58.1.0"
arrow-schema.workspace = true
dbfy-config = { path = "../dbfy-config" }
dbfy-frontend-datafusion = { path = "../dbfy-frontend-datafusion" }
napi = { version = "3", default-features = false, features = ["async", "napi9"] }
napi-derive = "3"
tokio.workspace = true

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
