[package]
name = "dbfy-provider-rest"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
chrono = "0.4.44"
futures.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
dbfy-config = { path = "../dbfy-config" }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6.5"
