[package]
name = "dbfy-provider-rows-file"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["jsonl", "csv", "regex", "logfmt", "syslog"]
jsonl = ["dep:serde_json", "dep:serde_json_path"]
csv = ["dep:csv"]
regex = ["dep:regex"]
logfmt = []
syslog = []
all = ["jsonl", "csv", "regex", "logfmt", "syslog"]

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
bincode = "1.3"
csv = { workspace = true, optional = true }
dbfy-config = { path = "../dbfy-config" }
dbfy-provider = { path = "../dbfy-provider" }
futures.workspace = true
glob = "0.3"
memchr = "2.7"
regex = { version = "1.11", optional = true }
serde = { workspace = true }
serde_json = { version = "1.0", optional = true }
serde_json_path = { version = "0.7", optional = true }
thiserror.workspace = true
twox-hash = "1.6"

[dev-dependencies]
tempfile = "3.13"
tokio.workspace = true
