[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dbfy"
version = "0.4.0"
description = "Each source is a SQL table: REST APIs, log files, CSV, JSONL, syslog — one schema, cross-source JOINs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pyarrow>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/frhack/dbfy"
Repository = "https://github.com/frhack/dbfy"
Issues = "https://github.com/frhack/dbfy/issues"
Documentation = "https://github.com/frhack/dbfy/blob/main/docs/quickstart.md"

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
python-source = "python"
module-name = "dbfy._dbfy"
